# CarambolaChat

./: .gitignore  CMakeLists.txt  CarambolaChat.kdev4  CarambolaChat.sln  Makefile  README.md
CarambolaChat/: AppDelegate.h  AppDelegate.m  CarambolaChat.vcxproj  CarambolaChat.vcxproj.filters  Info.plist  precomp.h  program.cpp  program.h
CarambolaChat.xcodeproj/: project.pbxproj
CarambolaChat.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CarambolaChat.xcodeproj/project.xcworkspace/xcshareddata/: CarambolaChat.xccheckout
CarambolaChat/Base.lproj/: MainMenu.xib
CarambolaChat/Controller/About/: about_controller.cpp  about_controller.h
CarambolaChat/Controller/Chat/: chat_controller.cpp  chat_controller.h
CarambolaChat/Controller/ChatWindow/: chat_window_controller.cpp  chat_window_controller.h
CarambolaChat/Controller/Connections/: connections_controller.cpp  connections_controller.h
CarambolaChat/Controller/EditConnection/: edit_connection_controller.cpp  edit_connection_controller.h
CarambolaChat/Controller/Workspace/: taskbar_notification.cpp  taskbar_notification.h  workspace_controller.cpp  workspace_controller.h  workspace_page_controller.cpp  workspace_page_controller.h
CarambolaChat/Controllers/Chat/: chat_controller.cpp  chat_controller.h  chat_view_controller.cpp  chat_view_controller.h
CarambolaChat/Controllers/ChatWindow/: chat_window_controller.cpp  chat_window_controller.h
CarambolaChat/Controllers/Connections/: connections_controller.cpp  connections_controller.h  connections_view_controller.cpp  connections_view_controller.h
CarambolaChat/Controllers/EditConnection/: edit_connection_controller.cpp  edit_connection_controller.h
CarambolaChat/Controllers/Workspace/: workspace_controller.cpp  workspace_controller.h  workspace_page_controller.cpp  workspace_page_view_controller.h  workspace_view_controller.cpp  workspace_view_controller.h
CarambolaChat/Model/: app_model.cpp  app_model.h  settings.cpp  settings.h
CarambolaChat/Model/DCCChat/: dcc_chat_connection.cpp  dcc_chat_connection.h
CarambolaChat/Model/DCCFileTransfer/: dcc_file_transfer_connection.cpp  dcc_file_transfer_connection.h
CarambolaChat/Model/IRCSession/: command.cpp  irc_connection.cpp  irc_connection.h  irc_entity.cpp  irc_message.cpp  irc_message.h  irc_session.cpp  irc_session.h  irc_text.cpp  irc_text.h
CarambolaChat/Model/IdentServer/: ident_server.cpp  ident_server.h  ident_server_connection.cpp  ident_server_connection.h
CarambolaChat/Model/XMLSettings/: xml_settings.cpp  xml_settings.h  xml_settings_document.cpp  xml_settings_document.h  xml_settings_list.h  (+3 more)
CarambolaChat/Models/: settings.cpp
Setup/: Product.wxs  Setup.wixproj
(+79 files in other folders)
